// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StateFilter component snaps should render in default mode 1`] = `
<div
  className="state-filters theme-state-filters"
>
  <span
    className="option-label theme-option-label"
  >
    Filter:
  </span>
  <ActionIconToggle
    active={false}
    className="certified-filter theme-certified-filter"
    icon="talend-badge"
    label="Certified"
    onClick={[Function]}
    tooltipPlacement="top"
  />
  <ActionIconToggle
    active={false}
    className="favorite-filter theme-favorite-filter"
    icon="talend-star"
    label="Favorites"
    onClick={[Function]}
    tooltipPlacement="top"
  />
</div>
`;

exports[`StateFilter component snaps should render with only certified 1`] = `
<div
  className="state-filters theme-state-filters"
>
  <span
    className="option-label theme-option-label"
  >
    Filter:
  </span>
  <ActionIconToggle
    active={false}
    className="certified-filter theme-certified-filter"
    icon="talend-badge"
    label="Certified"
    onClick={[Function]}
    tooltipPlacement="top"
  />
</div>
`;

exports[`StateFilter component snaps should render with only favorites 1`] = `
<div
  className="state-filters theme-state-filters"
>
  <span
    className="option-label theme-option-label"
  >
    Filter:
  </span>
  <ActionIconToggle
    active={false}
    className="favorite-filter theme-favorite-filter"
    icon="talend-star"
    label="Favorites"
    onClick={[Function]}
    tooltipPlacement="top"
  />
</div>
`;

exports[`StateFilter component snaps should render with states to set to true 1`] = `
<div
  className="state-filters theme-state-filters"
>
  <span
    className="option-label theme-option-label"
  >
    Filter:
  </span>
  <ActionIconToggle
    active={true}
    className="certified-filter theme-certified-filter"
    icon="talend-badge"
    label="Certified"
    onClick={[Function]}
    tooltipPlacement="top"
  />
  <ActionIconToggle
    active={true}
    className="favorite-filter theme-favorite-filter"
    icon="talend-star"
    label="Favorites"
    onClick={[Function]}
    tooltipPlacement="top"
  />
</div>
`;
